[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Objects/BackendControl.gd" type="Script" id=2]

[node name="BackendControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetRoomButton" type="Button" parent="."]
margin_top = -0.420448
margin_right = 86.0
margin_bottom = 19.5796
text = "GetRoom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateRoomButton" type="Button" parent="."]
margin_left = 2.0
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "UpdateRoom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomIdTextEdit" type="TextEdit" parent="."]
margin_left = 0.159103
margin_top = 44.9202
margin_right = 86.1591
margin_bottom = 67.9202
text = "room22"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomDataRichTextLabel" type="RichTextLabel" parent="."]
margin_left = 0.579544
margin_top = 74.7611
margin_right = 85.5795
margin_bottom = 158.761
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GetRoomButton" to="." method="_on_GetRoomButton_pressed"]
[connection signal="pressed" from="UpdateRoomButton" to="." method="_on_UpdateRoomButton_pressed"]
